[gd_scene format=3 uid="uid://bg7rl40ogvcfm"]

[ext_resource type="FontFile" uid="uid://vew8is4rhj0r" path="res://UI/Assets/Dank-Depths.ttf" id="1_0roxf"]
[ext_resource type="Script" uid="uid://bm11k8oo5dmhm" path="res://UI/Scripts/pause.gd" id="1_3l5e3"]

[sub_resource type="Theme" id="Theme_14sa4"]
default_font = ExtResource("1_0roxf")

[node name="Pause" type="Control" unique_id=1649060483]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_14sa4")
script = ExtResource("1_3l5e3")

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=1038631502]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 400

[node name="Control2" type="Control" parent="HBoxContainer" unique_id=93471906]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer" unique_id=525499998]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer" unique_id=593362728]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer" unique_id=168656321]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "PAUSED"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="HBoxContainer/VBoxContainer" unique_id=1245924084]
process_mode = 3
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "RESUME"

[node name="Settings" type="Button" parent="HBoxContainer/VBoxContainer" unique_id=361374001]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SETTINGS"

[node name="Quit1" type="Button" parent="HBoxContainer/VBoxContainer" unique_id=1127198582]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "QUIT TO MAIN MENU"

[node name="Quit2" type="Button" parent="HBoxContainer/VBoxContainer" unique_id=1215931259]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "QUIT TO DESKTOP"

[node name="Control2" type="Control" parent="HBoxContainer/VBoxContainer" unique_id=890735742]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="HBoxContainer" unique_id=1918495672]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Quit1" to="." method="_on_quit_1_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Quit2" to="." method="_on_quit_2_pressed"]
